conformance_test/core_language_tests/positive_tests/B_matching_incoming_values/B01_template_matching/B0105_matching_character_pattern/B010505_pattern_compatibility/NegSyn_B010505_pattern_compatibility_001.ttcn
/******************************************************************************
 * Copyright (c) ETSI 2017.
 *
 * This file is subject to copyrights owned by ETSI. Non-exclusive permission
 * is hereby granted, free of charge, to copy, reproduce and amend this file
 * under the following conditions: It is provided "as is", without warranty of any
 * kind, expressed or implied.
 * 
 * ETSI shall never be liable for any claim, damages, or other liability arising
 * from its use or inability of use.This permission does not apply to any documentation
 * associated with this file for which ETSI keeps all rights reserved. The present
 * copyright notice shall be included in all copies of whole or part of this
 * file and shall not imply any sub-license right.
 *
 * Modified by: Adrien Kirjak
 *
 ** @version  0.0.1
 ** @purpose  1:B.1.5.0, Ensure that the IUT correctly handles character pattern metacharacters
 compatibility rules of template matching
 ** @verdict  pass reject
 ***************************************************/

module NegSyn_B010505_pattern_compatibility_001 { 	

    type component GeneralComp {}

	testcase TC_NegSyn_B010505_pattern_compatibility_001() runs on GeneralComp {

     	template charstring mw_matchingTemplate:= pattern "??riable reference";
     	var charstring mw_matchingTemplate_2:= pattern mw_matchingTemplate;    
		// error: Cannot assign a template to a non-template variable.
   
	}

	control{
    	execute(TC_NegSyn_B010505_pattern_compatibility_001());
	}

}
 
